--- a/src/index.Rmd
+++ b/src/index.Rmd
@@ -9,7 +9,7 @@ editor_options:
 ---
 
 <p align="center">
-  <img src="https://github.com/chenh19/prelim/raw/main/notes/images/exam.png" width=85%>
+  <img src="" width=85%>
 </p>
 
 
