--- a/src/misc.Rmd
+++ b/src/misc.Rmd
@@ -40,13 +40,13 @@ rm(list = ls())
 
 ```{bash,eval=FALSE}
 # git pull
-#mkdir ./prelim/
-#cd ./prelim/ 
+#mkdir ./Developing/Roxie/
+#cd ./Developing/Roxie/
 #git init
 #git pull git@github.com:chenh19/Roxie.git
 
 # git push
-#cd ./prelim/
+#cd ./Developing/Roxie/
 #git remote add origin git@github.com:chenh19/Roxie.git
 git commit -a -m "update"
 git add --all
