--- a/src/index.Rmd
+++ b/src/index.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "Playlog"
+subtitle: "How I play with my daughter"
 site: workflowr::wflow_site
 output:
   workflowr::wflow_html:
@@ -7,8 +8,6 @@ output:
 editor_options:
   chunk_output_type: console
 ---
-
-This is how I play with my daughter
 
 <p align="center">
   <img src="https://raw.githubusercontent.com/chenh19/Roxie/main/src/Images/cover.jpg" width=60%>
