--- a/src/routine.Rmd
+++ b/src/routine.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Miscellaneous"
+title: "Routine Code"
 site: workflowr::wflow_site
 output:
   workflowr::wflow_html:
@@ -12,7 +12,6 @@ editor_options:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-### Routine Code
 
 **Load:**
 
