--- a/src/misc.Rmd
+++ b/src/misc.Rmd
@@ -12,44 +12,6 @@ editor_options:
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-### Routine Code
+## Misc.
 
-**Load:**
-
-```{r,eval=FALSE}
-# load
-setwd("./Developing/Roxie/")
-library(workflowr)
-```
-
-**WorkflowR publish:**
-
-```{r,eval=FALSE}
-# workflowR publish
-wflow_publish("./src/*.Rmd")
-```
-
-**Cleanup:**
-
-```{r,eval=FALSE}
-# cleanup environment
-rm(list = ls())
-```
-
-**Git commit and push:**
-
-```{bash,eval=FALSE}
-# git pull
-#mkdir ./Developing/Roxie/
-#cd ./Developing/Roxie/
-#git init
-#git pull git@github.com:chenh19/Roxie.git
-
-# git push
-#cd ./Developing/Roxie/
-#git remote add origin git@github.com:chenh19/Roxie.git
-git commit -a -m "update"
-git add --all
-git commit -a -m "update"
-git push -u origin main
-```
+-
